--- a/index.html
+++ b/index.html
@@ -10,42 +10,41 @@
 
 <body>
 
-
-    <header id="head_line">
+    <header id="headLine">
         <h1>Drag and drop!</h1>
         <p>Solve the puzzle</p>
     </header>
 
-    <section id="game_boards">
+    <section id="game-boards">
         <!-- these are the draggable pieces -->
-        <div class="puzzle_pieces">
-            <img id="top_left" draggable src="images/top_left0.jpg" class="puzzle_image" alt="top left">
-            <img id="top_right" draggable src="images/top_right0.jpg" class="puzzle_image" alt="top right">
-            <img id="bottom_left" draggable src="images/bottom_left0.jpg" class="puzzle_image" alt="bottom left">
-            <img id="bottom_right" draggable src="images/bottom_right0.jpg" class="puzzle_image" alt="bottom right">
+        <div class="puzzle-pieces">
+            <img id="topLeft" draggable src="images/topLeft0.jpg" class="puzzle-image" alt="top left">
+            <img id="topRight" draggable src="images/topRight0.jpg" class="puzzle-image" alt="top right">
+            <img id="bottomLeft" draggable src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left">
+            <img id="bottomRight" draggable src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right">
         </div>
 
         <!-- we want to drop the draggable pieces here -->
-        <div class="puzzle_board">
-            <div class="drop_zone tl"></div>
-            <div class="drop_zone tr"></div>
-            <div class="drop_zone bl"></div>
-            <div class="drop_zone br"></div>
+        <div class="puzzle-board">
+            <div class="drop-zone tl"></div>
+            <div class="drop-zone tr"></div>
+            <div class="drop-zone bl"></div>
+            <div class="drop-zone br"></div>
         </div>
     </section>
 
     <footer>
         <p>Click thumb to change pieces!</p>
-        <nav id="button_holder">
+        <nav id="buttonHolder">
             <!-- data-bgref(0-3) -->
-            <img src="images/button_zero.jpg" data-bgref="0" alt="thumbnail">
-            <img src="images/button_one.jpg" data-bgref="1" alt="thumbnail">
-            <img src="images/button_two.jpg" data-bgref="2" alt="thumbnail">
-            <img src="images/button_three.jpg" data-bgref="3" alt="thumbnail">
+            <img src="images/buttonZero.jpg" data-bgref="0" alt="thumbnail">
+            <img src="images/buttonOne.jpg" data-bgref="1" alt="thumbnail">
+            <img src="images/buttonTwo.jpg" data-bgref="2" alt="thumbnail">
+            <img src="images/buttonThree.jpg" data-bgref="3" alt="thumbnail">
         </nav>
     </footer>
 
-    <script src="script/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
